# python-sii-2026

./: .gitignore  README.md
.github/: README.md
.github/workflows/: pruebas-curso.yml
.github/workflows-desactivado/: pruebas-curso.yml
docs/: certificacion-spec-012.md  certificacion-spec-014.md  certificacion-spec-015.md  certificacion-windows-real.md  guia-del-relator.md  setup-alumno.md
labs/capstone-el-arenario/: README.md  pyproject.toml
labs/capstone-el-arenario/datos/: censo_anual.csv  fuentes_semilla.py  multas.json
labs/capstone-el-arenario/datos/fuentes/: contribuyentes.db  pagos_anuales.xlsx
labs/capstone-el-arenario/docs/: certificacion-capstone.md  troubleshooting.md
labs/capstone-el-arenario/escenario/: ESCENARIO.md  RUBRICA.md
labs/capstone-el-arenario/pistas/: nivel-1-orientacion.md  nivel-2-plan.md  nivel-3-fragmentos.md
labs/capstone-el-arenario/plantillas/: BITACORA.md
labs/capstone-el-arenario/soluciones/: arenario.py
labs/lab-01-primer-dia/: README.md  pyproject.toml
labs/lab-01-primer-dia/docs/: certificacion-lab-01.md  troubleshooting.md
labs/lab-01-primer-dia/guia/: 01-contexto.md  02-variables-y-tipos.md  03-cadenas.md  04-listas.md  05-triaje.md
labs/lab-01-primer-dia/plantillas/: RESPUESTAS.md  triaje.py
labs/lab-01-primer-dia/soluciones/: desafio-mayor-deudor.md  triaje.py
labs/lab-02-cuaderno-crece/: README.md  pyproject.toml
labs/lab-02-cuaderno-crece/datos/: archivador.py
labs/lab-02-cuaderno-crece/docs/: certificacion-lab-02.md  troubleshooting.md
labs/lab-02-cuaderno-crece/guia/: 01-contexto.md  02-diccionarios.md  03-funciones.md  04-excepciones.md  05-consolidacion.md
labs/lab-02-cuaderno-crece/plantillas/: RESPUESTAS.md  consolidar.py
labs/lab-02-cuaderno-crece/soluciones/: consolidar.py  desafio-top-deudores.md
labs/lab-03-numeros-del-puerto/: README.md  pyproject.toml
labs/lab-03-numeros-del-puerto/datos/: cuaderno.py  recaudacion.py
labs/lab-03-numeros-del-puerto/docs/: certificacion-lab-03.md  troubleshooting.md
labs/lab-03-numeros-del-puerto/guia/: 01-contexto.md  02-arrays.md  03-vectorizacion.md  04-dataframes.md  05-panorama.md
labs/lab-03-numeros-del-puerto/plantillas/: RESPUESTAS.md  panorama.py
labs/lab-03-numeros-del-puerto/soluciones/: desafio-rubro-estrella.md  panorama.py
labs/lab-04-cuatro-fuentes/: README.md  pyproject.toml
labs/lab-04-cuatro-fuentes/datos/: fuentes_semilla.py
labs/lab-04-cuatro-fuentes/datos/fuentes/: contribuyentes.db  multas.json  pagos.csv  permisos_eventos.xlsx
labs/lab-04-cuatro-fuentes/docs/: certificacion-lab-04.md  troubleshooting.md
labs/lab-04-cuatro-fuentes/guia/: 01-contexto.md  02-csv-y-excel.md  03-json.md  04-base-de-datos.md  05-consolidado.md
labs/lab-04-cuatro-fuentes/plantillas/: RESPUESTAS.md  fuentes.py
labs/lab-04-cuatro-fuentes/soluciones/: desafio-quinta-fuente.md  fuentes.py
labs/lab-05-gran-limpieza/: README.md  pyproject.toml
labs/lab-05-gran-limpieza/datos/: censo_patentes.csv
labs/lab-05-gran-limpieza/docs/: certificacion-lab-05.md  troubleshooting.md
labs/lab-05-gran-limpieza/guia/: 01-contexto.md  02-homogeneizacion.md  03-duplicados-y-filtrado.md  04-outliers.md  05-pipeline.md
labs/lab-05-gran-limpieza/plantillas/: RESPUESTAS.md  limpiar.py
labs/lab-05-gran-limpieza/soluciones/: desafio-certificado-calidad.md  limpiar.py
labs/lab-06-transformar-combinar/: README.md  pyproject.toml
labs/lab-06-transformar-combinar/datos/: censo_limpio.csv  pagos_julio.csv  pagos_junio.csv
labs/lab-06-transformar-combinar/docs/: certificacion-lab-06.md  troubleshooting.md
labs/lab-06-transformar-combinar/guia/: 01-contexto.md  02-mapear-y-clasificar.md  03-combinar.md  04-agregar-y-pivotear.md  05-tablero.md
labs/lab-06-transformar-combinar/plantillas/: RESPUESTAS.md  tablero.py
labs/lab-06-transformar-combinar/soluciones/: desafio-grafico-concejo.md  tablero.py
pruebas/: README.md  flujos.py  lib_pruebas.py  probar_curso.py  probar_lab.py
pruebas/docs/: certificacion-suite.md
specs/: SPEC-002.md  SPEC-003.md  SPEC-004.md  SPEC-005.md  SPEC-006.md  SPEC-007.md  SPEC-008.md  SPEC-009.md
